fixed vertical overflow

--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,8 @@ body.slides-now {
 	right: 0;
 	left: 0;
 	bottom: 0;
+	height: 100%;
+	overflow-y: hidden;
 }
 
 .slides-now section.bespoke-slide {
